--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "dayjs": "^1.10.4",
         "element-plus": "^1.0.2-beta.33",
         "html2canvas": "^1.0.0-rc.7",
+        "kuroshiro": "^1.1.2",
+        "kuroshiro-analyzer-kuromoji": "^1.1.0",
         "lodash": "^4.17.21",
         "mime": "^2.5.2",
         "normalize.css": "^8.0.1",
